# notify-hub

./: .dockerignore  .env.example  .gitignore  404.html  BUGLIST.md  README.md  RELEASE_NOTES.md  fault_test.py  index.html  mode_switch_test.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sitemap.xml  stress_test.py  stress_test.sh  stress_test_all_modes.py
.github/workflows/: release.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
api/admin/: index.html
api/messages/: index.html
api/send/: index.html
api/topics/: index.html
api/user/: index.html
architecture/: index.html
assets/css/: styles.58032a61.css
assets/js/: 0e384e19.6a0e0414.js  0e384e19.e6853f80.js  0e800433.7f9ebd84.js  0e800433.b33b6cc9.js  1134.a340a1cd.js  1134.f0bed768.js  2469.f0d7fb09.js  283c535b.0d7e6e59.js  283c535b.7c72f02a.js  35a214ea.36926229.js  35a214ea.3c26a263.js  35a214ea.e3a3ce71.js  3bcd393e.14628022.js  3bcd393e.3c28a885.js  3bcd393e.469f0171.js  412ca4ff.0dbfe37f.js  419928f3.ee422cbd.js  4a77e703.1dde0a72.js  4a77e703.2f4013c3.js  4a77e703.9154a4e8.js  4d54d076.7f948c08.js  4d54d076.88a5674c.js  4e9ca076.7d0aab29.js  4e9ca076.a5b42def.js  5281b7a2.513ab15f.js  5281b7a2.709fae8f.js  6804.dd2d6b8d.js  7780305c.a40661d8.js  7780305c.e9ab5e5c.js  8089.7bc44551.js  8f030830.02f26875.js  8f030830.6f18cccc.js  9319.9b9a72c2.js  9829aaaf.afeb1f2b.js  b28d0233.08d0e82e.js  b28d0233.62372c1f.js  ccb003bc.d09a90fe.js  d589d3a7.28855bf9.js  d589d3a7.d48ec32b.js  def12729.4ae19f7b.js  (+13 more)
channels/email/: index.html
channels/overview/: index.html
channels/push/: index.html
channels/sms/: index.html
cli/: package.json
cli/src/: index.ts
cli/src/commands/: config.ts  send.ts  serve.ts  status.ts
cli/src/lib/: client.ts  config.ts
contributing/: index.html
crates/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  config.rs  main.rs
crates/cli/src/commands/: listen.rs  mod.rs
crates/common/: Cargo.toml
crates/common/src/: constants.rs  error.rs  schemas.rs  types.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs  preset_topics.json
crates/server/src/auth/: login_rate_limit.rs  middleware.rs  mod.rs  password.rs
crates/server/src/db/: migrations.rs  mod.rs
crates/server/src/routes/: admin.rs  attachments.rs  channels.rs  cleanup_logs.rs  clients.rs  health.rs  messages.rs  mod.rs  push.rs  send.rs  stats.rs  templates.rs  tokens.rs  topics.rs  upload.rs  user_settings.rs  v1_topics.rs
crates/server/src/worker/: channels.rs  cleanup.rs  mod.rs  queue.rs
deploy/: .env.docker  Dockerfile  Dockerfile.nginx  README.md  deploy.sh  docker-compose.yml  nginx.conf  test-docker.sh
deployment/docker/: index.html
deployment/vps/: index.html
desktop/: Cargo.toml  Dockerfile.appimage  build-appimage.sh  tauri.conf.json
desktop/capabilities/: default.json
desktop/src/: api.rs  commands.rs  config.rs  logging.rs  main.rs  messages.rs  notify.rs  poll.rs  sse.rs  ws.rs
desktop/ui/: index.html  package.json  vite.config.ts
desktop/ui/src/: App.tsx
desktop/ui/src/components/: ComposeModal.tsx  ConnectView.tsx  Dashboard.tsx  DeleteModal.tsx  OfflineDialog.tsx  QuickSendModal.tsx  SettingsModal.tsx  TitleBar.tsx  Toast.tsx
desktop/ui/src/hooks/: useApp.ts
desktop/ui/src/lib/: constants.ts  i18n.ts  render.ts  tauri.ts
desktop/ui/src/styles/: global.css
development/: index.html
docs/: docusaurus.config.ts  sidebars.ts
docs/docs/: architecture.md  contributing.md  development.md  getting-started.md  intro.md  performance.md  templates.md  tokens.md
docs/docs/api/: admin.md  messages.md  send.md  topics.md  user.md
docs/docs/channels/: email.md  overview.md  push.md  sms.md
docs/docs/deployment/: docker.md  vps.md
docs/i18n/zh-Hans/: code.json
docs/src/css/: custom.css
docs/src/pages/: index.tsx
getting-started/: index.html
intro/: index.html
performance/: index.html
rust-server/cli/: Cargo.toml
rust-server/cli/src/: client.rs  config.rs  main.rs
rust-server/common/src/: lib.rs  schemas.rs  types.rs
rust-server/server/src/: log_broadcast.rs
server/: package.json
server/drizzle/: 0001_friendly_network.sql  0002_dazzling_flatman.sql  0006_numerous_ego.sql  0008_chubby_morph.sql  0012_special_kronos.sql  0013_cool_bloodscream.sql  0014_add_push_client_user_id.sql  0017_add_topics.sql  0018_add_app_logs.sql
server/drizzle/meta/: 0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0009_snapshot.json  0011_snapshot.json  _journal.json  (+3 more)
server/src/: app.ts  logger.ts  storage.ts
shared/: package.json
shared/src/: constants.ts  index.ts  schemas.ts  types.ts
skills/: README.md
skills/claude/: claude-code-notifyhub.js  settings.json
skills/codex/: codex-notifyhub.js
skills/hook/: claude-code-notifyhub.js
skills/openclaw/: openclaw-notifyhub.ts
skills/opencode/: opencode-notifyhub.ts
templates/: index.html
test/scripts/: env.sh  send-attachment-base64.sh  send-basic.sh  send-batch.sh  send-delay.sh  send-extended.sh  send-format-variants.sh  send-priority.sh
tokens/: index.html
web/: index.html  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css
zh-Hans/: 404.html  index.html  sitemap.xml
zh-Hans/architecture/: index.html
zh-Hans/contributing/: index.html
zh-Hans/development/: index.html
zh-Hans/getting-started/: index.html
zh-Hans/intro/: index.html
zh-Hans/performance/: index.html
zh-Hans/templates/: index.html
zh-Hans/tokens/: index.html
(+197 files in other folders)
