[workspace]
members = ["common", "server", "cli"]
default-members = ["server"]
resolver = "2"

[workspace.package]
version = "0.6.1"
edition = "2021"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }
bcrypt = "0.16"
rand = "0.8"

# Validation
validator = { version = "0.19", features = ["derive"] }

# ID generation
uuid = { version = "1", features = ["v4"] }
nanoid = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client (for FCM, SMS APIs, CLI)
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# WebSocket
tokio-tungstenite = "0.26"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
dotenvy = "0.15"

# Misc
futures-util = "0.3"
base64 = "0.22"
regex = "1"
