[package]
name = "notifyhub-client"
version = "0.1.0"
edition = "2021"
description = "NotifyHub Push Client"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "v5"] }
notify-rust = "4.11"
dirs = "5"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
whoami = "1"
hostname = "0.4"
open = "5"
csv = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
