[package]
name = "notifyhub-client"
version = "0.1.0"
edition = "2021"
description = "NotifyHub Push Client"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "v5"] }
notify-rust = { version = "4.11", features = ["images"] }
dirs = "5"
toml = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
whoami = "1"
hostname = "0.4"
open = "5"
csv = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
log = "0.4"
simplelog = "0.12"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
