[package]
name = "notifyhub-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
regex = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
