[package]
name = "notifyhub-server"
version.workspace = true
edition.workspace = true

[dependencies]
notifyhub-common = { path = "../common" }
tokio = { workspace = true }
axum = { workspace = true, features = ["multipart", "ws"] }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
bcrypt = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
nanoid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
lettre = { workspace = true }
tokio-tungstenite = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
futures-util = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
async-stream = "0.3"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2"
